remove old file and add titles in heads

--- a/dev.html
+++ b/dev.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+<title>Marco Biazzini : OS Code</title>
+</head>
 <body>
 
 <p><a href="http://github.com/marbiaz/GitWorks" target="_blank">GitWorks</a>, a tool set to analyze Git-based software repositories.</p>
