--- a/jobs.html
+++ b/jobs.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+<title>Marco Biazzini : Past Jobs</title>
+</head>
 <body>
   <p>Research and development : <a href="http://www.images-et-reseaux.com/en/content/p2pweb" target="_blank">P2PWeb Project</a> : a P2P-assisted CDN architecture.</p>
 
