--- a/pubs.html
+++ b/pubs.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>JabRef References output</title>
+<title>Marco Biazzini : Publications</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
