--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Marco Biazzini's Home Page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <base href="http://marbiaz.github.io/"></base>
 <link rel="stylesheet" type="text/css" href="style.css" />
