recent picture of me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div id="wrap">
 
 <div id="header">
-<img style="margin: 0 40px 40px 0; float: right; margin: 0 40px 0 0; padding: 40px 0 0 0" src="me.jpg" alt="image" />
+<img style="margin: 0 40px 40px 0; float: right; margin: 0 40px 0 0; padding: 40px 0 0 0" src="me2014.jpg" alt="image" />
 <h1>Marco Biazzini</h1><br/>
 <h2>Ph.D.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Scientist</h2>
 </div>
