--- a/contacts.html
+++ b/contacts.html
@@ -5,10 +5,13 @@
 <body>
 
 <h2> Snail mail address</h2>
-<p>INRIA - Rennes<br/>
-Campus de Beaulieu<br/>
-35042 Rennes Cedex France
+<p>INRIA - Sophia Antipolis<br/>
+Bat. Lagrange<br/>
+2004, route des Lucioles - BP 93<br/>
+06902 Sophia Antipolis Cedex<br/>
+France<br/>
 </p>
+<p>Desk telephone : +33 4 92 38 76 96 </p>
 
 <h2>Email</h2>
 <p>Marco.Biazzini[AT]inria.fr</p>
