update job info

--- a/home.html
+++ b/home.html
@@ -5,16 +5,8 @@
 <body>
 
 
-<p>I am a post-doc at INRIA - Rennes, France. I work on two research tasks:<br/>
-<ul>
-  <li>Empirical analysis of opensource software repositories. The purpose is to understand nontrivial emergent patterns that characterize
-successful projects. The analysis is meant to deepen the comprehension of the dynamics that undergo software design and development processes, focusing
-on different scales.</li>
-  <li>Evolutionary algorithms for software diversification. I am collaborating at the design and the development of a simulation environment to
-test novel evolutionary techniques aimed at increasing software diversity, with the purpose of improving robustness and resilience of complex
-software architectures. This task is performed within the <a href="http://diversify-project.eu" target="_blank">Diversify EU FET project</a>.</li>
-</ul>
-</p>
+<p>I am a research engineer at <A href="http://www.inria.fr/centre/sophia" target="_blank">INRIA - Sophia Antipolis</a>, France.</p>
+<p> I work on the design and the implementation of efficient distributed algorithms to compute optimal paths in large graph databases. </p>
 
 <div class="clear"> </div>
 
