add pointer to Diversify

--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,7 @@
 <title>Marco Biazzini : Past Jobs</title>
 </head>
 <body>
+  <p>Research and development : <a href="http://www.diversify-project.eu" target="_blank">Diversify FET EU Project</a> : ecology-inspired software diversification.</p>
   <p>Research and development : <a href="http://www.images-et-reseaux.com/en/content/p2pweb" target="_blank">P2PWeb Project</a> : a P2P-assisted CDN architecture.</p>
 
   <p>Teaching  (as assistant) : <a href="http://www.dit.unitn.it/~montreso/asd/index.shtml" target="_blank">Algoritmi e Strutture Dati</a></p>
