more info about R&D

--- a/home.html
+++ b/home.html
@@ -16,18 +16,9 @@
 
 	 <ul>
 
-	  <li>Empirical analysis of Git-based software repositories (see  <a href="http://github.com/marbiaz/GitWorks" target="_blank">GitWorks</a>
-	  on Github).</li>
-	<li>P2P algorithms for user preferences elicitation (see <a href="http://github.com/marbiaz/WhatUsersWant" target="_blank">WUW</a>
-	on Github).</li>
-	  <li>Design and the implementation of P2P evolutionary function optimization algorithms (see <a href="http://p2poem.sf.net" target="_blank">P2Poem</a>
-
-	  on Sourceforge).</li>
-
-	<li>Distributed decentralized processing in a peer-to-peer fashion.</li>
-
-	<li>Epidemic protocols for overlay maintenance to support distributed algorithms in large-scale P2P networks.</li>
-
+	  <li>Empirical analysis of Git-based software repositories (see  more <a href="index.html?p=rd.html#git">here</a>).</li>
+	<li>P2P algorithms for user preferences elicitation (see more <a href="index.html?p=rd.html#wuw">here</a>).</li>
+	  <li>P2P evolutionary function optimization algorithms (see more <a href="index.html?p=rd.html#p2poem">here</a>).</li>
 	</ul>
 
 </body>
