--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <div id="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
+<li><a href="index.html?p=rd.html">R &amp; D</a></li>
 <li><a href="index.html?p=pubs.html">Publications</a></li>
 <li><a href="http://scholar.google.fr/citations?user=ZtKHMeMAAAAJ&hl=en" target="_blank">Me@GoogleScholar</a></li>
 <li><a href="index.html?p=jobs.html">Past Jobs</a></li>
@@ -65,8 +66,6 @@ Copyright &copy; 2014 by <a href="#">Marco Biazzini</a>
 </div>
 
 <div class="right">
-<!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-3.html
--->
 Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
 
