new short CV and activity page

--- a/contacts.html
+++ b/contacts.html
@@ -11,10 +11,10 @@ Bat. Lagrange<br/>
 06902 Sophia Antipolis Cedex<br/>
 France<br/>
 </p>
-<p>Desk telephone : +33 4 92 38 76 96 </p>
+<p>Telephone : +33 6 42 82 89 13 </p>
 
 <h2>Email</h2>
-<p>Marco.Biazzini[AT]inria.fr</p>
+<p>marbiaz[AT]gmail[DOT]com</p>
 
 </body>
 </html>
