--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
 
 <div class="clear"> </div>
 
-<H3>Research</H3>
+	<p>My professional activity aims at pursuing my research interests via the development of software prototypes
+	and experimental toolsets.</p>
 
       <p>My main interests are:</p>
 
