--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 <div id="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
+<li><a href="index.html?p=cv.html">CV & activities</a></li>
 <li><a href="index.html?p=rd.html">R &amp; D</a></li>
 <li><a href="index.html?p=pubs.html">Publications</a></li>
 <li><a href="http://scholar.google.fr/citations?user=ZtKHMeMAAAAJ&hl=en" target="_blank">Me@GoogleScholar</a></li>
 <li><a href="index.html?p=jobs.html">Past Jobs</a></li>
 <li><a href="index.html?p=dev.html">My Code</a></li>
-<li><a href="docs/Biazzini_CV.pdf" target="_blank">CV</a></li>
 <li><a href="index.html?p=contacts.html">Contacts</a></li>
 </ul>
 </div>
