--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
 
 <H3>Technical skills</H3>
 	<p>Here a list of the main skills I acquired throughout my research and development activity.</p>
-	<p>Software development<\p>
+	<p>Software development</p>
 	<ul>
 	<li>Java (JSP, JDBC, JGit) (research prototypes design and development) </li>
 	<li>Bash scripting (Unix-Linux system automation)</li>
