--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 <div id="wrap">
 
 <div id="header">
-<img style="margin: 0 40px 40px 0; float: right; margin: 0 40px 0 0; padding: 40px 0 0 0" src="me2014.jpg" alt="image" />
-<h1>Marco Biazzini</h1><br/>
-<h2>Ph.D.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Scientist</h2>
+<img style="float: right; margin: 0 80px 0 0; padding: 40px 0 0 0" src="me2014.jpg" alt="image" />
+<div style="padding: 0 0 0 80px"><h1>Marco Biazzini</h1><br/>
+<h2>Ph.D.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Scientist</h2></div>
 </div>
 
 <div id="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="index.html?p=cv.html">CV & activities</a></li>
+<li><a href="index.html?p=cv.html">CV &amp; activities</a></li>
 <li><a href="index.html?p=rd.html">R &amp; D</a></li>
 <li><a href="index.html?p=pubs.html">Publications</a></li>
 <li><a href="http://scholar.google.fr/citations?user=ZtKHMeMAAAAJ&hl=en" target="_blank">Me@GoogleScholar</a></li>
