change to current position at Amadeus

--- a/contacts.html
+++ b/contacts.html
@@ -5,13 +5,12 @@
 <body>
 
 <h2> Snail mail address</h2>
-<p>INRIA - Sophia Antipolis<br/>
-Bat. Lagrange<br/>
-2004, route des Lucioles - BP 93<br/>
+<p>Amadeus S.A.S.<br/>
+485 Route du Pin Montard<br/>
 06902 Sophia Antipolis Cedex<br/>
-France<br/>
+France
 </p>
-<p>Telephone : +33 6 42 82 89 13 </p>
+<p>Telephone : +33 4 97 15 88 03 </p>
 
 <h2>Email</h2>
 <p>marbiaz[AT]gmail[DOT]com</p>
