--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
 <body>
 
 
-<p>I am a research engineer at <A href="http://www.inria.fr/centre/sophia" target="_blank">INRIA - Sophia Antipolis</a>, France.</p>
-<p> I work on the design and the implementation of efficient distributed algorithms to compute optimal paths in large graph databases. </p>
+<p>I am a development engineer at <A href="http://www.amadeus.com" target="_blank">Amadeus S.A.S. - Sophia Antipolis</a>, France.</p>
+<p> I work on maintaining and improving efficient combinatorial algorithms for the company's main search engine. </p>
 
 <div class="clear"> </div>
 
-	<p>My professional activity aims at pursuing my research interests via the development of software prototypes
+	<p>As a researcher, I've always pursued novel directions by combining the theoretical work with the development of ad-hoc software prototypes
 	and experimental toolsets.</p>
 
       <p>My main interests are:</p>
