--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,8 @@
 <title>Marco Biazzini : Past Jobs</title>
 </head>
 <body>
+<p>For a detailed presentation, see <a href="index.html?p=cv.html">my CV</a>.</p>
+<p>Research and development : <A href="http://www.inria.fr/centre/sophia" target="_blank">INRIA - Sophia Antipolis</a> : distributed combinatorial algorithms to compute optimal paths in dense graph databases.</p>
   <p>Research and development : <a href="http://www.diversify-project.eu" target="_blank">Diversify FET EU Project</a> : ecology-inspired software diversification.</p>
   <p>Research and development : <a href="http://www.images-et-reseaux.com/en/content/p2pweb" target="_blank">P2PWeb Project</a> : a P2P-assisted CDN architecture.</p>
 
