fix: get rid of old remark

--- a/pubs.html
+++ b/pubs.html
@@ -755,7 +755,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>On Analyzing the Topology of Commit Histories in Decentralized Version Control Systems<p class="infolinks">[<a href="javascript:toggleInfo('Biazzini14b','bibtex')">show/hide BibTeX</a>]</p></td>
 	<td>2014</td>
 	<td>ICSME 2014&nbsp;</td>
-	<td>In Proceedings (to appear)</td>
+	<td>In Proceedings</td>
 	<td><b><A href="./docs/Biazzini14c.pdf" target="_blank">pdf</A></b>&nbsp;</td>
 </tr>
 <tr id="bib_Biazzini14b" class="bibtex noshow">
