--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div id="wrap">
 
 <div id="header">
-<img style="float: right; margin: 0 80px 0 0; padding: 40px 0 0 0" src="me2014.jpg" alt="image" />
+<img style="float: right; margin: 0 80px 0 0; padding: 40px 0 0 0" src="Marco.jpg" alt="image" />
 <div style="padding: 0 0 0 80px"><h1>Marco Biazzini</h1><br/>
 <h2>Ph.D.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Scientist</h2></div>
 </div>
