--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
 <body>
 
 <h2> Snail mail address</h2>
-<p>Amadeus S.A.S.<br/>
+<p>Amadeus S.a.S.<br/>
 485 Route du Pin Montard<br/>
 06902 Sophia Antipolis Cedex<br/>
 France
