--- a/cv.html
+++ b/cv.html
@@ -17,22 +17,21 @@
 	<p>Here a list of the main skills I acquired throughout my research and development activity.</p>
 	<p>Software development</p>
 	<ul>
+	<li>C</li>
+	<li>C++</li>
+	<li>Python</li>
 	<li>Java (JSP, JDBC, JGit) (research prototypes design and development) </li>
 	<li>Bash scripting (Unix-Linux system automation)</li>
-	<li>C (ad-hoc application library development) </li>
-	<li>C++ (basic skills)</li>
-	<li>Python (basic skills)</li>
 	</ul>
 	<p>Software maintenance</p>
 	<ul>
 	<li>Git (deep knowledge and high expertise)</li>
 	<li>SVN (standard operational expertise)</li>
 	</ul>
-	<p>Operating Systems</p>
+	<p>Operating Systems / Architecture</p>
 	<ul>
-	<li>Linux (administrator level skills)</li>
-	<li>MS Windows (standard operational skills)</li>
-	<li>Mac OS (standard operational skills)</li>
+	<li>Linux (admin)</li>
+	<li>Open Back-End (OBE)</li>
 	</ul>
 	<p>Specific advanced courses attended as Ph.D. candidate:</p>
 	<ul>
@@ -50,8 +49,8 @@
 
 <H3>Other professional activities</H3>
 
-	<p>I am Program Committee Member of the ACM Genetic and Evolutionary Computation Conference
-	 (<A href="http://sigevo.hosting.acm.org/wiki/tiki-index.php?page=GECCOs" target="_blank">GECCO</A>) since 2010, for the Parallel Evolutionary Systems (PES) track.</p>
+	<p>I've been Program Committee Member of the ACM Genetic and Evolutionary Computation Conference
+	 (<A href="http://sigevo.hosting.acm.org/wiki/tiki-index.php?page=GECCOs" target="_blank">GECCO</A>) from 2010 to 2016, for the Parallel Evolutionary Systems (PES) track.</p>
 
 	<p>I served as reviewer upon request for the following international journals:</p>
 	<ul>
